# adventOfCode2022

./: .gitignore  README.md
camen/: README.md  day_eight.py  day_five.py  day_four.py  day_nine.py  day_one.py  day_seven.py  day_six.py  day_ten.py  day_three.py  day_two.py
david/: README.md  dayOne.js
david/common/: index.js
david/dayEight/: dayEight.js
david/dayFive/: dayFive.js
david/dayFour/: dayFour.js
david/dayOne/: dayOne.js
david/daySeven/: daySeven.js  help.txt
david/daySix/: daySix.js
david/dayTen/: dayTen.js
david/dayThree/: dayThree.js
david/dayTwo/: dayTwo.js
david/day_eleven/: day_eleven.py
jverdesi/: CMakeLists.txt  main.cpp  main.h
jverdesi/Data/: inputDay13.txt
jverdesi/Day0/: Day0.cpp  Day0.h
jverdesi/Day00/: Day0.cpp
jverdesi/Day01/: CalorieCounting.h
jverdesi/Day02/: RockPaperScissors.cpp  RockPaperScissors.h
jverdesi/Day03/: RucksackReorganization.cpp  RucksackReorganization.h
jverdesi/Day04/: CampCleanup.cpp
jverdesi/Day05/: SupplyStacks.h
jverdesi/Day06/: TuningTrouble.cpp  TuningTrouble.h
jverdesi/Day08/: TreetopTreeHouse.cpp
jverdesi/Day09/: RopeBridge.cpp
jverdesi/Day09/outputBoards/: 2Knots.txt  32Knots.txt  4Knots.txt  8Knots.txt
jverdesi/Day1/: CMakeLists.txt  CalorieCounting.cpp  MaxElfCalories.cpp  MaxElfCalories.h  main.cpp
jverdesi/Day10/: CathodeRayTube.cpp  CathodeRayTube.h
jverdesi/Day11/: MonkeyInTheMiddle.cpp  MonkeyInTheMiddle.h
jverdesi/Day12/: HillClimbAlgorithm.cpp  HillClimbAlgorithm.h
jverdesi/Day13/: DistressSignal.cpp  DistressSignal.h
jverdesi/Day14/: RegolithReservoir.cpp  RegolithReservoir.h
jverdesi/Day15/: BeaconExclusionZone.cpp  BeaconExclusionZone.h
jverdesi/Day16/: ProboscideaVolcanium.cpp  ProboscideaVolcanium.h
jverdesi/Day2/: Day2.cpp  RPS.cpp  RPS.h  RockPaperScissors.cpp
jverdesi/Day3/: RucksackReorganization.cpp
jverdesi/Day4/: CampCleanup.h
jverdesi/Day5/: Day5.cpp  Day5.h  SupplyStacks.cpp
jverdesi/Day7/: NoSpaceLeftOnDevice.cpp  NoSpaceLeftOnDevice.h
jverdesi/Day8/: TreetopTreeHouse.h
jverdesi/Day9/: RopeBridge.cpp  RopeBridge.h
jverdesi/Day9/outputBoards/: 16Knots.txt  2Knots.txt  32Knots.txt  4Knots.txt  8Knots.txt
jverdesi/Utils/: ColorMod.cpp  ColorMod.h  FileReader.cpp  FileReader.h  InitDay.cpp  InitDay.h  StackHelper.cpp  StackHelper.h  tokenizer.cpp  tokenizer.h
jverdesi/adventPrompts/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day2.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
mikey/: README.md
mikey/common/src/: lib.rs  parser.rs
mikey/day_02/: Cargo.toml
mikey/day_04/: Cargo.toml
mikey/day_06/: Cargo.toml
mikey/day_06/src/: main.rs
mikey/day_07/: Cargo.toml
mikey/day_07/src/: main.rs
mikey/day_08/: Cargo.toml
mikey/day_08/src/: main.rs
mikey/day_09/: Cargo.toml
mikey/day_10/: Cargo.toml
mikey/day_11/: Cargo.toml
mikey/day_12/: Cargo.toml
mikey/day_13/: Cargo.toml
mikey/day_14/: Cargo.toml
mikey/day_15/: Cargo.toml
mikey/day_five/: Cargo.toml
mikey/day_three/: Cargo.toml
(+15 files in other folders)
